feat: dialog chats support
