# internal/transport/http/v1/dialog.go
@@ -1,26 +1,52 @@
 package v1
 
 import (
+	"context"
+	"errors"
 	"net/http"
+	"strconv"
 	"time"
+
+	"github.com/Chatyx/backend/internal/dto"
+	"github.com/Chatyx/backend/internal/entity"
+	"github.com/Chatyx/backend/pkg/httputil"
+	"github.com/Chatyx/backend/pkg/httputil/middleware"
+	"github.com/Chatyx/backend/pkg/validator"
 
 	"github.com/julienschmidt/httprouter"
 )
 
 const (
-	dialogListPath   = "/dialogs"
-	dialogDetailPath = "/dialogs/:dialog_id"
+	dialogListPath   = "/api/v1/dialogs"
+	dialogDetailPath = "/api/v1/dialogs/:dialog_id"
 )
 
+const (
+	dialogIDPathParam = "dialog_id"
+)
+
+type DialogPartner struct {
+	UserID    int  `json:"user_id"`
+	IsBlocked bool `json:"is_blocked"`
+}
+
 type Dialog struct {
-	ID          int `json:"id"`
-	Participant struct {
-		UserID    int    `json:"user_id"`
-		Username  string `json:"username"`
-		IsBlocked bool   `json:"is_blocked"`
-	} `json:"participant"`
-	IsBlocked bool      `json:"is_blocked"`
-	CreatedAt time.Time `json:"created_at"`
+	ID        int           `json:"id"`
+	IsBlocked bool          `json:"is_blocked"`
+	Partner   DialogPartner `json:"partner"`
+	CreatedAt time.Time     `json:"created_at"`
+}
+
+func NewDialog(dialog entity.Dialog) Dialog {
+	return Dialog{
+		ID:        dialog.ID,
+		IsBlocked: dialog.IsBlocked,
+		Partner: DialogPartner{
+			UserID:    dialog.Partner.UserID,
+			IsBlocked: dialog.Partner.IsBlocked,
+		},
+		CreatedAt: dialog.CreatedAt,
+	}
 }
 
 type DialogList struct {
@@ -28,26 +54,72 @@ type DialogList struct {
 	Data  []Dialog `json:"data"`
 }
 
+func NewDialogList(dialogs []entity.Dialog) DialogList {
+	data := make([]Dialog, len(dialogs))
+	for i, dialog := range dialogs {
+		data[i] = NewDialog(dialog)
+	}
+
+	return DialogList{
+		Total: len(dialogs),
+		Data:  data,
+	}
+}
+
 type DialogCreate struct {
-	Participant struct {
+	Partner struct {
 		UserID int `json:"user_id" validate:"required"`
-	} `json:"participant"`
+	} `json:"partner"`
+}
+
+func (d DialogCreate) DTO() dto.DialogCreate {
+	return dto.DialogCreate{PartnerUserID: d.Partner.UserID}
 }
 
 type DialogUpdate struct {
-	Participant struct {
+	Partner struct {
 		IsBlocked *bool `json:"is_blocked"`
-	} `json:"participant"`
+	} `json:"partner"`
+}
+
+func (d DialogUpdate) DTO() dto.DialogUpdate {
+	return dto.DialogUpdate{
+		PartnerIsBlocked: d.Partner.IsBlocked,
+	}
+}
+
+type DialogService interface {
+	List(ctx context.Context) ([]entity.Dialog, error)
+	Create(ctx context.Context, obj dto.DialogCreate) (entity.Dialog, error)
+	GetByID(ctx context.Context, id int) (entity.Dialog, error)
+	Update(ctx context.Context, obj dto.DialogUpdate) error
+}
+
+type DialogControllerConfig struct {
+	Service   DialogService
+	Authorize middleware.Middleware
+	Validator validator.Validator
 }
 
 type DialogController struct {
+	service   DialogService
+	authorize middleware.Middleware
+	validator validator.Validator
+}
+
+func NewDialogController(conf DialogControllerConfig) *DialogController {
+	return &DialogController{
+		service:   conf.Service,
+		authorize: conf.Authorize,
+		validator: conf.Validator,
+	}
 }
 
 func (dc *DialogController) Register(mux *httprouter.Router) {
-	mux.HandlerFunc(http.MethodGet, dialogListPath, dc.list)
-	mux.HandlerFunc(http.MethodPost, dialogListPath, dc.create)
-	mux.HandlerFunc(http.MethodGet, dialogDetailPath, dc.detail)
-	mux.HandlerFunc(http.MethodPatch, dialogDetailPath, dc.update)
+	mux.Handler(http.MethodGet, dialogListPath, dc.authorize(http.HandlerFunc(dc.list)))
+	mux.Handler(http.MethodPost, dialogListPath, dc.authorize(http.HandlerFunc(dc.create)))
+	mux.Handler(http.MethodGet, dialogDetailPath, dc.authorize(http.HandlerFunc(dc.detail)))
+	mux.Handler(http.MethodPatch, dialogDetailPath, dc.authorize(http.HandlerFunc(dc.update)))
 }
 
 // list lists all dialogs
@@ -61,12 +133,20 @@ func (dc *DialogController) Register(mux *httprouter.Router) {
 //	@Security	JWTAuth
 //	@Router		/dialogs  [get]
 func (dc *DialogController) list(w http.ResponseWriter, req *http.Request) {
-	_, _ = w, req
+	ctx := req.Context()
+
+	dialogs, err := dc.service.List(ctx)
+	if err != nil {
+		httputil.RespondError(ctx, w, err)
+		return
+	}
+
+	httputil.RespondSuccess(ctx, w, http.StatusOK, NewDialogList(dialogs))
 }
 
-// create creates a dialog with a specified participant
+// create creates a dialog with a specified partner
 //
-//	@Summary	Create a dialog with a specified participant
+//	@Summary	Create a dialog with a specified partner
 //	@Tags		dialogs
 //	@Accept		json
 //	@Produce	json
@@ -77,7 +157,43 @@ func (dc *DialogController) list(w http.ResponseWriter, req *http.Request) {
 //	@Security	JWTAuth
 //	@Router		/dialogs  [post]
 func (dc *DialogController) create(w http.ResponseWriter, req *http.Request) {
-	_, _ = w, req
+	ctx := req.Context()
+
+	var bodyObj DialogCreate
+
+	if err := httputil.DecodeBody(req.Body, &bodyObj); err != nil {
+		httputil.RespondError(ctx, w, err)
+		return
+	}
+
+	if err := dc.validator.Struct(bodyObj); err != nil {
+		ve := validator.Error{}
+		if errors.As(err, &ve) {
+			httputil.RespondError(ctx, w, httputil.ErrValidationFailed.WithData(ve.Fields).Wrap(err))
+			return
+		}
+
+		httputil.RespondError(ctx, w, err)
+		return
+	}
+
+	dialog, err := dc.service.Create(ctx, bodyObj.DTO())
+	if err != nil {
+		switch {
+		case errors.Is(err, entity.ErrSuchDialogAlreadyExists):
+			httputil.RespondError(ctx, w, errSuchDialogAlreadyExists.Wrap(err))
+		case errors.Is(err, entity.ErrCreatingDialogWithYourself):
+			httputil.RespondError(ctx, w, errCreatingDialogWithYourself.Wrap(err))
+		case errors.Is(err, entity.ErrCreatingDialogWithNonExistencePartner):
+			httputil.RespondError(ctx, w, errCreatingDialogWithNonExistencePartner.Wrap(err))
+		default:
+			httputil.RespondError(ctx, w, err)
+		}
+
+		return
+	}
+
+	httputil.RespondSuccess(ctx, w, http.StatusCreated, NewDialog(dialog))
 }
 
 // detail gets a specified dialog
@@ -94,7 +210,26 @@ func (dc *DialogController) create(w http.ResponseWriter, req *http.Request) {
 //	@Security	JWTAuth
 //	@Router		/dialogs/{dialog_id}  [get]
 func (dc *DialogController) detail(w http.ResponseWriter, req *http.Request) {
-	_, _ = w, req
+	ctx := req.Context()
+	dialogID, err := strconv.Atoi(httprouter.ParamsFromContext(ctx).ByName(dialogIDPathParam))
+	if err != nil {
+		httputil.RespondError(ctx, w, httputil.ErrDecodePathParamsFailed.Wrap(err))
+		return
+	}
+
+	dialog, err := dc.service.GetByID(ctx, dialogID)
+	if err != nil {
+		switch {
+		case errors.Is(err, entity.ErrDialogNotFound):
+			httputil.RespondError(ctx, w, errDialogNotFound.Wrap(err))
+		default:
+			httputil.RespondError(ctx, w, err)
+		}
+
+		return
+	}
+
+	httputil.RespondSuccess(ctx, w, http.StatusOK, NewDialog(dialog))
 }
 
 // update updates a specified dialog
@@ -112,5 +247,45 @@ func (dc *DialogController) detail(w http.ResponseWriter, req *http.Request) {
 //	@Security	JWTAuth
 //	@Router		/dialogs/{dialog_id}  [patch]
 func (dc *DialogController) update(w http.ResponseWriter, req *http.Request) {
-	_, _ = w, req
+	ctx := req.Context()
+	dialogID, err := strconv.Atoi(httprouter.ParamsFromContext(ctx).ByName(dialogIDPathParam))
+	if err != nil {
+		httputil.RespondError(ctx, w, httputil.ErrDecodePathParamsFailed.Wrap(err))
+		return
+	}
+
+	var bodyObj DialogUpdate
+
+	if err = httputil.DecodeBody(req.Body, &bodyObj); err != nil {
+		httputil.RespondError(ctx, w, err)
+		return
+	}
+
+	if err = dc.validator.Struct(bodyObj); err != nil {
+		ve := validator.Error{}
+		if errors.As(err, &ve) {
+			httputil.RespondError(ctx, w, httputil.ErrValidationFailed.WithData(ve.Fields).Wrap(err))
+			return
+		}
+
+		httputil.RespondError(ctx, w, err)
+		return
+	}
+
+	obj := bodyObj.DTO()
+	obj.ID = dialogID
+
+	err = dc.service.Update(ctx, obj)
+	if err != nil {
+		switch {
+		case errors.Is(err, entity.ErrDialogNotFound):
+			httputil.RespondError(ctx, w, errDialogNotFound.Wrap(err))
+		default:
+			httputil.RespondError(ctx, w, err)
+		}
+
+		return
+	}
+
+	httputil.RespondSuccess(ctx, w, http.StatusNoContent, nil)
 }
